Remove redundant code after Java 17 upgrade [HZ-3684] (#505)
Once the codebase has been upgraded to [Java 17 code
level](https://github.com/hazelcast/hazelcast-mono/pull/436), redundant
code supporting Java <17 compatibility can be removed.

Changes:
- `--illegal-access=deny` VM argument removed
- [This is now the default
behaviour](https://openjdk.org/jeps/403#:~:text=This%20mode%20was%20the%20default%20in%20JDK%C2%A016)
- Remove <=17 from `com.hazelcast.internal.util.JavaVersion`
- In any affected callers, simplify the logic, as we can assume a
minimum version of 17 and can make that path the new default, e.g.:
      - `com.hazelcast.internal.hotrestart.impl.gc.mem.MmapSlab.java`
- `com.hazelcast.internal.hotrestart.impl.gc.mem.accessors.Java14Mapper`
is the new default
- `com.hazelcast.internal.hotrestart.impl.gc.mem.accessors.Java8Mapper`
removed
      - `com.hazelcast.enterprise.NLCModeLicenseTest`
         - Test that would have always been skipped now `@Ignored`
- `hazelcast-it/jdk17-tests` module removed
- Tests now merged into OS repo alongside existing serialization tests

Fixes: [HZ-3684](https://hazelcast.atlassian.net/browse/HZ-3684)

[HZ-3684]:
https://hazelcast.atlassian.net/browse/HZ-3684?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

GitOrigin-RevId: 033dbb89b8b76372953025bea0b7b838d4364af7